maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:78: error: illegal start of simple expression
    }
    ^